# cuper

./: LICENSE  README.md  doc.md  example.py  parsing_argv.py  setup.cfg  using_option.py
cuper/: core.py  models.py  util.py
src/cuper/: __init__.py  core.py  util.py
