[metadata]
name = cuper
version = 1.0.0
description = custom parser
author = Marcio Dantas
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    cuper
python_requires = >=3.9
package_dir =
    =src
zip_safe = no